--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,8 @@
     <title>Melrov Idle Leaderboards</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-    <script src="config.js?id=1"></script>
-    <script src="fetchData.js?id=7"></script>
+    <script src="config.js?id=2"></script>
+    <script src="fetchData.js?id=8"></script>
     <script>
         $(document).ready(function() {
             mainFunction();
@@ -23,6 +23,7 @@
             <tr>
                 <th>Username</th>
                 <th>Total Level</th>
+                <th>Total Gold</th>
                 <th>Woodcutting</th>
                 <th>Fishing</th>
                 <th>Firemaking</th>
@@ -43,6 +44,8 @@
                 <th>Prayer</th>
                 <th>Slayer</th>
                 <th>Herblore</th>
+                <th>Gold Coins</th>
+                <th>Gold Value of Bank</th>
             </tr>
         </thead>
         <tbody id="MainTableBody">
@@ -51,6 +54,7 @@
             <tr>
                 <th>Username</th>
                 <th>Total Level</th>
+                <th>Total Gold</th>
                 <th>Woodcutting</th>
                 <th>Fishing</th>
                 <th>Firemaking</th>
@@ -71,6 +75,8 @@
                 <th>Prayer</th>
                 <th>Slayer</th>
                 <th>Herblore</th>
+                <th>Gold Coins</th>
+                <th>Gold Value of Bank</th>
             </tr>
         </tfoot>
     </table>
